--- a/SocialNetworkHarvester/templates/snh/snh_base.html
+++ b/SocialNetworkHarvester/templates/snh/snh_base.html
@@ -69,7 +69,7 @@
     <!-- Header -->
     <div id="header">
         <div id="branding">
-            <h1>Social Network Harvester - Interface de consultation</h1>
+            <h1><a href='/'>Social Network Harvester</a></h1>
         </div>
         <table class="tableheader" id="user-tools" cellpadding="5">
             <tr>
