--- a/SocialNetworkHarvester/templates/snh/snh_base.html
+++ b/SocialNetworkHarvester/templates/snh/snh_base.html
@@ -31,7 +31,8 @@
         height:100%; 
         background:rgba(100,100,100,0.9); 
         top:0px; 
-        display: None
+        display: None;
+        z-index: 4;
     }
     #centerPopupmiddle {
         vertical-align:middle;
@@ -43,13 +44,13 @@
         padding:5px;
     }
     </style>
-<script type="text/javascript" language="javascript" src="/static/jquery.js"></script>
+<!--<script type="text/javascript" language="javascript" src="/static/jquery.js"></script>-->
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" language="javascript" src="/static/jquery.dataTables.js"></script>
 <script type="text/javascript" charset="utf-8" src="/static/js/TableTools.js"></script>
 <script type="text/javascript" charset="utf-8" src="/static/js/ZeroClipboard.js"></script>
-<script type="text/javascript" charset="utf-8" src="/static/js/jquery.fileDownload.js"></script>
+<!--<script type="text/javascript" charset="utf-8" src="/static/js/jquery.fileDownload.js"></script>-->
 <script type="text/javascript" charset="utf-8" src="/static/snh.js"></script>
 <script>
     function startLoading(){$("body").addClass("loading");};
