--- a/SocialNetworkHarvester/templates/snh/facebook.html
+++ b/SocialNetworkHarvester/templates/snh/facebook.html
@@ -21,7 +21,173 @@
                   } ]
                 },
             });
-	} );
+        $('#posts_table').dataTable(
+            {
+                "iDisplayLength": iDisplayLength, 
+                "sPaginationType": sPaginationType,
+                "sDom": sDom,
+                "aaSorting": aaSorting,
+                "bAutoWidth": bAutoWidth,
+                "bServerSide": bServerSide, 
+                "sAjaxSource": "{% url snh.views.get_fb_harvester_post_list 'web' harvester_id %}",
+                "fnRowCallback": function( nRow, aData, iDisplayIndex ) {
+                    $('td:eq(1)', nRow).html( '<a href="/fb_post_detail/{{ harvester_id }}/'+aData[1]+'">'+_wordwrap(aData[1])+'</a>' );
+                    ($('td:eq(2)', nRow).html() == "None") ? from = aData[15] : from = aData[2];
+                    $('td:eq(2)', nRow).html(  '<a href="/fb_user_detail/{{ harvester_id }}/fid/'+aData[16]+'">'+_wordwrap(from)+'</a>' );
+                    $('td:eq(3)', nRow).html( _wordwrap(aData[3]) );
+                    $('td:eq(4)', nRow).html( _wordwrap(aData[4],120) );
+                    ($('td:eq(6)', nRow).html() == "None") ? msg = aData[14] : msg = aData[6];
+                    $('td:eq(6)', nRow).html( _wordwrap(msg) );
+                    ($('td:eq(7)', nRow).html() == "None") ? link = "" : link = '<a href="'+aData[7]+'" target="_blank">'+ _wordwrap(aData[7]) +'</a>';
+                    $('td:eq(7)', nRow).html( link );
+                    ($('td:eq(12)', nRow).html() == "None") ? app = "" : app = aData[12]
+                    $('td:eq(12)', nRow).html( app );
+                },
+                "aoColumnDefs": [ 
+                    {
+                        "bSearchable": false, "aTargets": [ 0, 13 ],
+                    }
+                ],
+                "aoColumns": [ 
+                    { "bVisible":    true },    //0 : u'created_time/updated_time',
+                    { "bVisible":    true },    //1 : u'fid',
+                    { "bVisible":    true },    //2 : u'ffrom__username',
+                    { "bVisible":    true },    //3 : u'name',
+                    { "bVisible":    true },    //4 : u'description',
+                    { "bVisible":    false },    //5 : u'caption',
+                    { "bVisible":    true },    //6 : u'message/story',
+                    { "bVisible":    true },    //7 : u'link__original_url',
+                    { "bVisible":    true },    //8 : u'ftype',
+                    { "bVisible":    true },    //9 : u'likes_count',
+                    { "bVisible":    true },    //10: u'shares_count',
+                    { "bVisible":    true },    //11: u'comments_count',
+                    { "bVisible":    false },    //12: u'application_raw',
+                    { "bVisible":    false },    //13: u'updated_time',
+                    { "bVisible":    false },    //14: u'story',
+                    { "bVisible":    false },    //15: u'ffrom__name',
+                    { "bVisible":    false },    //16: u'ffrom__fid',
+                ],
+                "oTableTools": {
+                  "aButtons": [ {
+                    "sExtends": "download",
+                    "sUrl": "{% url snh.views.get_fb_harvester_post_list 'csv' harvester_id %}",
+                  } ]
+                },
+            });
+        $('#comments_table').dataTable({
+            "iDisplayLength": iDisplayLength, 
+            "sPaginationType": sPaginationType,
+            "sDom": sDom,
+            "aaSorting": aaSorting,
+            "bAutoWidth": bAutoWidth,
+            "bServerSide": bServerSide, 
+            "sAjaxSource": "{% url snh.views.get_fb_harvester_comment_list 'web' harvester_id  %}",
+            "aoColumnDefs": aoColumnDefs,
+            "fnRowCallback": function( nRow, aData, iDisplayIndex ) {
+                //from
+                ($('td:eq(1)', nRow).html() == "None") ? from = aData[8] : from = aData[1];
+                $('td:eq(1)', nRow).html(  '<a href="/fb_user_detail/{{ harvester_id }}/fid/'+aData[9]+'">'+from+'</a>' );
+                //to (post_ffrom)
+                $('td:eq(2)', nRow).html(  '<a href="/fb_user_detail/{{ harvester_id }}/fid/'+aData[10]+'">'+aData[2]+'</a>' );
+                //post
+                $('td:eq(3)', nRow).html(  '<a href="/fb_post_detail/{{ harvester_id }}/'+aData[3]+'">'+aData[3]+'</a>' );
+            },
+            "aoColumns": [ 
+                { "bVisible":    true },    //0 : u'created_time/updated_time',
+                { "bVisible":    true },    //1 : u'ffrom__username',
+                { "bVisible":    true },    //2 : u'post__ffrom__name',
+                { "bVisible":    true },    //3 : u'post__fid',
+                { "bVisible":    true },    //4 : u'message',
+                { "bVisible":    true },    //5 : u'likes',
+                { "bVisible":    false },    //6 : u'user_likes',
+                { "bVisible":    false },    //7 : u'ftype',
+                { "bVisible":    false },    //8 : u'ffrom__name',
+                { "bVisible":    false },    //9 : u'ffrom__fid',
+                { "bVisible":    false },    //10: u'post__ffrom__fid',
+            ],
+            "oTableTools": {
+              "aButtons": [ {
+                "sExtends": "download",
+                "sUrl": "{% url snh.views.get_fb_harvester_comment_list 'csv' harvester_id %}",
+              } ]
+            },
+	    });
+        $('#centerPopupOutter').click(function() {
+           $('#centerPopupOutter').hide();
+        });
+
+        $('#centerPopupInner').click(function(event){
+           event.stopPropagation();
+        });
+        $('#ToolTables_posts_table_0').unbind('click' )
+        $('#ToolTables_posts_table_0').click(function(){
+            document.getElementById('centerPopupInner').innerHTML = '\
+                <br><center>Please select the fields to include:</center><br><hr>\
+                <form action="/dwld_fb_posts_csv" method="GET">\
+                    <table>\
+                        <tr><td><input type="checkbox" id="checkAll"></td><td><b> Select/deselect all</b></td></tr>\
+                        {% for fieldlist in status_fields %}\
+                        <tr>\
+                            {% for field in fieldlist %}\
+                                {% if field == None %}\
+                                <td></td><td></td>\
+                                {% else %}\
+                                    <td><input type="checkbox" name="fields" value={{ field }}></td><td> {{ field }}</td>\
+                                {% endif %}\
+                            {% endfor %}\
+                        </tr>\
+                        {% endfor %}\
+                    </table>\
+                    <input type="hidden" name="harvester_id" value="{{ harvester_id }}">\
+                    <input type="submit" id="submitButton" value="submit">\
+                </form>\
+            ';
+            $('#checkAll').click(function(event) {   
+                var checkBox = this
+                $(':checkbox').each(function() {
+                    this.checked = checkBox.checked;                        
+                });
+            });
+            $('#submitButton').click(function(){
+                document.getElementById('centerPopupOutter').style.display = 'None';
+            })
+            document.getElementById('centerPopupOutter').style.display = 'inline-block';
+        })
+        $('#ToolTables_comments_table_0').unbind('click' )
+        $('#ToolTables_comments_table_0').click(function(){
+            document.getElementById('centerPopupInner').innerHTML = '\
+                <br><center>Please select the fields to include:</center><br><hr>\
+                <form action="/dwld_fb_comments_csv" method="GET">\
+                    <table>\
+                        <tr><td><input type="checkbox" id="checkAll"></td><td><b> Select/deselect all</b></td></tr>\
+                        {% for fieldlist in comment_fields %}\
+                        <tr>\
+                            {% for field in fieldlist %}\
+                                {% if field == None %}\
+                                <td></td><td></td>\
+                                {% else %}\
+                                    <td><input type="checkbox" name="fields" value={{ field }}></td><td> {{ field }}</td>\
+                                {% endif %}\
+                            {% endfor %}\
+                        </tr>\
+                        {% endfor %}\
+                    </table>\
+                    <input type="hidden" name="harvester_id" value="{{ harvester_id }}">\
+                    <input type="submit" id="submitButton" value="submit">\
+                </form>\
+            ';
+            $('#checkAll').click(function(event) {   
+                var checkBox = this
+                $(':checkbox').each(function() {
+                    this.checked = checkBox.checked;                        
+                });
+            });
+            $('#submitButton').click(function(){
+                document.getElementById('centerPopupOutter').style.display = 'None';
+            })
+            document.getElementById('centerPopupOutter').style.display = 'inline-block';
+        })
+    });
 </script>
 {% endblock %}
 {% block submenu %}
@@ -51,6 +217,44 @@
         <th>checkins</th>
         <th>talking_about_count</th>
     </tr>
+    </thead>
+    <tbody>
+    </tbody>
+</table>
+<h3>List of all posts</h3>
+<table id="posts_table" class="pretty" width="100%">
+    <thead>
+    <tr>
+        <th>Created / Updated time</th>
+        <th>Post ID</th>
+        <th>To</th>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Caption</th>
+        <th>Message / Story</th>
+        <th>Link</th>
+        <th>Type</th>
+        <th>Likes count</th>
+        <th>Shares count</th>
+        <th>Comments count</th>
+        <th>App</th>
+    </tr>
+    </thead>
+    <tbody>
+    </tbody>
+</table>
+<h3>List of all comments</h3>
+<table id="comments_table" class="pretty">
+    <thead>
+        <tr>
+            <th>Created time</th>
+            <th>From</th>
+            <th>To</th>
+            <th>Post ID</th>
+            <th>Message</th>
+            <th>Likes</th>
+            <th>User likes</th>
+        </tr>
     </thead>
     <tbody>
     </tbody>
