--- a/SocialNetworkHarvester/templates/snh/twitter.html
+++ b/SocialNetworkHarvester/templates/snh/twitter.html
@@ -70,6 +70,13 @@
                   } ]
                 },
             });
+        $('#centerPopupOutter').click(function() {
+           $('#centerPopupOutter').hide();
+        });
+
+        $('#centerPopupInner').click(function(event){
+           event.stopPropagation();
+        });
         $('#ToolTables_status_table_0').unbind('click' )
         $('#ToolTables_status_table_0').click(function(){
             document.getElementById('centerPopupInner').innerHTML = '\
