--- a/SocialNetworkHarvester/templates/snh/snh_base.html
+++ b/SocialNetworkHarvester/templates/snh/snh_base.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="{{ LANGUAGE_CODE|default:"en-us" }}" xml:lang="{{ LANGUAGE_CODE|default:"en-us" }}">
 <head>
-<title>{% block title %}{% endblock %}</title>
+<title>{% block title %}{% endblock %}Social Network Harvester</title>
 {% block extrastyle %}{% endblock %}
 <style type="text/css" title="currentStyle">
 	@import "/static/complete.css"; 
