--- a/SocialNetworkHarvester/templates/snh/facebook_post.html
+++ b/SocialNetworkHarvester/templates/snh/facebook_post.html
@@ -177,7 +177,7 @@
 </table>
 
 <h3>Comments</h3>
-<div  id='commentpost_chart' style='margin:0 auto; width: 1024px; height: 240px;'></div>
+<div  id='commentpost_chart' style='margin:0 auto; width: 100%; height: 240px;'></div>
 <table id="comments_table" class="pretty">
     <thead>
         <tr>
