--- a/SocialNetworkHarvester/templates/snh/twitter.html
+++ b/SocialNetworkHarvester/templates/snh/twitter.html
@@ -16,10 +16,12 @@
                     $('td:eq(1)', nRow).html( '<a href="/tw_user_detail/'+{{harvester_id}}+'/'+aData[2]+'">'+aData[1]+'</a>' );
                 },
                 "oTableTools": {
-                  "aButtons": [ {
+                  "aButtons": [ 
+                    /*{
                     "sExtends": "download",
                     "sUrl": "{% url snh.views.get_tw_list 'csv' harvester_id %}",
-                  } ]
+                    } */
+                  ]
                 },
             });
 		$('#search_table').dataTable(
@@ -40,10 +42,11 @@
                     /* Hit count */  { "bVisible":    true },
 		        ],
                 "oTableTools": {
-                  "aButtons": [ {
+                  "aButtons": [ 
+                  /*{
                     "sExtends": "download",
                     "sUrl": "{% url snh.views.get_twsearch_list 'csv' harvester_id %}",
-                  } ]
+                  }*/ ]
                 },
             });
         var oTable1 = $('#status_table').dataTable(
@@ -103,17 +106,29 @@
                 <td>End date:</td><td></td>\
                 <td><select name="stopYear" form="requestForm">\
                     {% for year in years %}\
-                    <option value="{{year}}">{{year}}</option>\
+                        {% if year == now.0 %}\
+                            <option value="{{year}}" selected="selected">{{year}}</option>\
+                        {% else %}\
+                            <option value="{{year}}">{{year}}</option>\
+                        {% endif %}\
                     {% endfor %}\
                 </select></td>\
                 <td><select name="stopMonth" form="requestForm">\
                     {% for month in months %}\
-                    <option value="{{month}}">{{month}}</option>\
+                        {% if month == now.1 %}\
+                            <option value="{{month}}" selected="selected">{{month}}</option>\
+                        {% else %}\
+                            <option value="{{year}}">{{year}}</option>\
+                        {% endif %}\
                     {% endfor %}\
                 </select></td>\
                 <td><select name="stopDay" form="requestForm">\
                     {% for day in days %}\
-                    <option value="{{day}}">{{day}}</option>\
+                        {% if day == now.2 %}\
+                            <option value="{{day}}" selected="selected">{{day}}</option>\
+                        {% else %}\
+                            <option value="{{day}}">{{day}}</option>\
+                        {% endif %}\
                     {% endfor %}\
                 </select></td>\
                 </tr>\
