Fix of download dialog end-date.

--- a/SocialNetworkHarvester/templates/snh/twitter_search_detail.html
+++ b/SocialNetworkHarvester/templates/snh/twitter_search_detail.html
@@ -71,7 +71,7 @@
                         {% if month == now.1 %}\
                             <option value="{{month}}" selected="selected">{{month}}</option>\
                         {% else %}\
-                            <option value="{{year}}">{{year}}</option>\
+                            <option value="{{month}}">{{month}}</option>\
                         {% endif %}\
                     {% endfor %}\
                 </select></td>\
