--- a/SocialNetworkHarvester/templates/snh/facebook.html
+++ b/SocialNetworkHarvester/templates/snh/facebook.html
@@ -157,7 +157,7 @@
                         {% if month == now.1 %}\
                             <option value="{{month}}" selected="selected">{{month}}</option>\
                         {% else %}\
-                            <option value="{{year}}">{{year}}</option>\
+                            <option value="{{month}}">{{month}}</option>\
                         {% endif %}\
                     {% endfor %}\
                 </select></td>\
@@ -241,7 +241,7 @@
                         {% if month == now.1 %}\
                             <option value="{{month}}" selected="selected">{{month}}</option>\
                         {% else %}\
-                            <option value="{{year}}">{{year}}</option>\
+                            <option value="{{month}}">{{month}}</option>\
                         {% endif %}\
                     {% endfor %}\
                 </select></td>\
