--- a/SocialNetworkHarvester/templates/snh/facebook_detail.html
+++ b/SocialNetworkHarvester/templates/snh/facebook_detail.html
@@ -179,7 +179,7 @@
                         {% if month == now.1 %}\
                             <option value="{{month}}" selected="selected">{{month}}</option>\
                         {% else %}\
-                            <option value="{{year}}">{{year}}</option>\
+                            <option value="{{month}}">{{month}}</option>\
                         {% endif %}\
                     {% endfor %}\
                 </select></td>\
