--- a/SocialNetworkHarvester/templates/snh/test_token.html
+++ b/SocialNetworkHarvester/templates/snh/test_token.html
@@ -82,8 +82,7 @@
             scope=
             "public_profile,
             email,
-            user_friends,
-            read_stream"
+            user_friends"
             onlogin="checkLoginState();">
             	<div id="loginButtonInner">Log in</div>
             </fb:login-button>
